[gd_scene load_steps=19 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://Material Castor/Castor Rescue.png" type="Texture" id=2]
[ext_resource path="res://Material Castor/CastorAtirando.png" type="Texture" id=3]
[ext_resource path="res://Material rescue/sons/laser.wav" type="AudioStream" id=4]

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 70, 60 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 70, 0, 70, 60 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 0, 60, 70, 60 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 70, 60, 70, 60 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 0, 120, 70, 60 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 70, 120, 70, 60 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 70, 60 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 70, 0, 70, 60 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 0, 60, 70, 60 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 70, 60, 70, 60 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 0, 120, 70, 60 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 70, 120, 70, 60 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": false,
"name": "Atirando",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 20.3333, 22.3333 )

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 1.5, 1.5 )
script = ExtResource( 1 )

[node name="Frames" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.333333, -3.00001 )
shape = SubResource( 8 )

[node name="gastac" type="Timer" parent="."]
wait_time = 60.0
autostart = true

[node name="Atira" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -3.0

[node name="AtiraT" type="Timer" parent="."]
wait_time = 0.5

[connection signal="timeout" from="gastac" to="." method="_on_gastac_timeout"]
[connection signal="timeout" from="AtiraT" to="." method="_on_AtiraT_timeout"]
